--- a/CroppingTool/css/default.css
+++ b/CroppingTool/css/default.css
@@ -1,2 +1,19 @@
-﻿body {
-}
+﻿div.page-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1vw; }
+  div.page-wrapper > div {
+    width: 48%;
+    background: #f1f1f1;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    div.page-wrapper > div * {
+      text-align: center; }
